Changes since 0.1.16:

* Support for Linux 2.6 (tested with 2.6.0-pre7).

* New mirrors.xml file supplied in the initial archive.
  This will allow the index to be downloaded separately, although at present
  it is also in the main archive too.

* Unsigned sites now give an error instead of a warning (the transition
  period is over; mirrors.xml is required, so sites have to rerun 0build
  anyway).

* Brought testing framework up-to-date.

Changes since 0.1.15:

* Uses expat instead of libxml for XML parsing (smaller).

* Added version numbers to LazyFS module. Allows easier upgrading.
  (suggested by Joachim Kupke).

* The helper now runs as a daemon, with output going to syslog.

* init.d/0install script is created to start and stop the daemon.

* 0refresh and other programs now use DBUS to communicate with zero-install.

Changes since 0.1.14:

* Removed unused expat include (spotted by Stuart Langridge).

* The MD5 checksum for downloaded archives is now checked.

* Lots of fixed-sized buffers were converted to dynamically-sized ones.

* GPG signatures are verified when updating a site index (needs auditing).

* override.xml file can be used to add symlinks to the filesystem.
  (the 0divert program uses this)

Changes since 0.1.13:

* 0refresh can be given a path and a date (like 0run), and only does
  the refresh if the path isn't recent enough.

* Fixed bug in 0run where the executable was a directory.

* Removed 0show. It wasn't much use, and ZeroProgress replaces it.

* Added missing test_cases.py file to distribution.

* Mount the /uri/0install filesystem automatically at install time.

* Made zero-install slightly more verbose by default.

* Warn about processing an index file if the path attribute is wrong.


Changes since 0.1.12:

* Support compiling with older Linux 2.4.18 kernels (Joachim Kupke).

* New /bin/0run program to be used in scripts, eg:
	#!/bin/0run example.com/myprog 2003-01-01
