@@ -1,3 +1,6 @@
+* Fixed some cases of using GFP_KERNEL with a spinlock held (reported by
+  Tristan).
+
 Changes since 0.1.16:
 
 * Support for Linux 2.6 (tested with 2.6.0-pre7).
